# milo-firmware

./: display.py  display_cli.py  display_led.py  hey_milo.ppn  main.py  mycronlog.txt  pyproject.toml  spotify.py  wakeword.py
asyncelevenlabs/: audio.py  conversation.py
models/wakeword/: hey_milo_mac.ppn
util/: is_raspberry.py
